[tool.poetry]
name = "awepy"
version = "0.0.0"
description = "An awesome Python template repository."
authors = ["Colk-tech <master@colk.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
injector = "^0.21.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
mypy = "^1.6.1"
pytest-env = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
